# tales-of-coph

./: CMakeLists.txt  flake.nix
src/: arcade.c  arcade.h  camera.h  font.c  font.h  hud.c  hud.h  item.c  item.h  item_inst.c  item_inst.h  item_stack.c  item_stack.h  keyboard.c  keyboard.h  main.c  menu.c  menu.h  particles.c  particles.h  pawn.c  pawn.h  renderer.c  renderer.h  sprite_sheet.c  sprite_sheet.h  state.c  state.h  tile.c  tile.h  utils.h  window.c  window.h
